--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,12 +2,25 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import url("https://rsms.me/inter/inter.css");
+
 :root {
   --theme-color: #5352ed;
 }
 
+html {
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+::selection {
+  background: var(--theme-color);
+  color: #fff;
+}
+
 body {
-  border-top: 6px solid var(--theme-color);
+  border-top: 10px solid;
+  border-image: linear-gradient(139deg, #7a17fb, #3001ff, #2139c1, #2a4aff) 3;
 }
 
 a:focus,
