--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -25,6 +25,6 @@ body {
 
 a:focus,
 button:focus {
-  outline: 3px dotted var(--theme-color);
+  outline: 4px solid var(--theme-color);
   outline-offset: 0;
 }
